# masterdata-test

./: .cruft.json  README.md  pyproject.toml
garbanzo/: .cruft.json  .gitignore  README.md  move_generated_files.sh  pyproject.toml
garbanzo/.github/workflows/: actions.yml
